# datacubes

./: .gitignore  GUIA_PROYECTOS_WORKSPACE.md  MaNGIA_catalog.fits  NOTA_DIRECTOR_ETIQUETAS_DESDE_SIMULACION.md  NOTA_DIRECTOR_MANGIA_MANGA_SEGMENTACION.md  README.md  RSS_A_CUBO_MANGA_LIKE.md  cube_web_viewer.py  requirements.txt  rss_to_cube_base.py
ImagesMangGenerator/: README.md  (+6 more)
galstructnet_s3/: CLAUDE.md  README.md  pyproject.toml
galstructnet_s3/configs/: base.yaml
galstructnet_s3/docs/: ARQUITECTURA.md
galstructnet_s3/scripts/: compute_norm_stats.py  init_evidence_scale.py
galstructnet_s3/specs/: 00_ROADMAP.md  10_dataset.md  20_encoder_spectral.md  21_encoder_spatial.md  22_encoder_physical.md  23_fusion.md  30_decoder_unet.md  40_head_segmentation.md  41_head_boundary.md  42_head_uncertainty.md  43_module_psf.md  45_evidence_layers.md  50_loss.md  60_training.md  70_evaluation.md  INDICE.md  MIGRATION.md
galstructnet_s3/tests/: conftest.py
soft_labels_generation_v2_1/: CLAUDE.md  INDICE.md  README.md  pyproject.toml
soft_labels_generation_v2_1/configs/: default.yaml  pilot.yaml
soft_labels_generation_v2_1/docs/: 04_contratos.md  05_data_inventory.md  06_implementation_notes.md
soft_labels_generation_v2_1/scripts/: build_unique_mangia_manifest.py  extract_stellar_potential_cache.py  make_segmentation_validation.py  make_visual_validation.py
soft_labels_generation_v2_1/specs/: 10_extractor.md  11_classifier.md  13_arm_detector.md
soft_labels_generation_v2_1/tests/: test_alignment.py  test_data_assets.py  test_pipeline_smoke.py  test_tng_potential.py
soft_labels_generation_v2_2/: .gitignore  INDICE.md  MIGRATION.md  README.md  pyproject.toml
soft_labels_generation_v2_2/aux/: .env.example
soft_labels_generation_v2_2/configs/: default.yaml  pilot.yaml
soft_labels_generation_v2_2/docs/: 01_diagnostico.md  02_principios.md  03_arquitectura.md  RUN_BATCH_REMOTE.md
soft_labels_generation_v2_2/notebooks/: 00_smoke_test.ipynb  build_smoke_test.py
soft_labels_generation_v2_2/reports/: 00_INDICE_fix_bulbo_disco.md  investigacion_inversion_bulbo_disco.md  revision_articulo_IBERAMIA.md
soft_labels_generation_v2_2/scripts/: calibrate_energy_cut.py  calibrate_hybrid_gate.py  compare_octree_vs_tng.py  compare_pre_post.py  detect_bowtie.py  detect_mergers.py  download_tng_inputs.py  inventory_inputs.py  label_one.py  prototype_reorder_fix.py  quantify_inversion.py  render_inspection.py  report_pre_post.py  review_wave1.py  run_batch.py  run_wave1.py  scan_inverted_pattern.py  test_reorder_fix.py  validate_frozen_fix.py
(+295 files in other folders)
