[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aperturenet-labels"
version = "2.0.0"
description = "Pipeline v2 de generación de etiquetas estructurales por spaxel para ApertureNet-S3"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "h5py",
    "astropy",
    "pydantic>=2",
    "pyyaml",
    "typer",
    "structlog",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
aperturenet-labels = "aperturenet_labels.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
